--- a/angular.json
+++ b/angular.json
@@ -87,9 +87,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/boostrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-lightbox/lightbox.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/ngx-lightbox/lightbox.js"
+            ]
           }
         }
       }
